---------------------------------------------------------------------------------------------------
Version: 0.6.0
Date: 19.02.2024
  Features:
    - added K2 compat
  Changes:
  Bugfixes:
---------------------------------------------------------------------------------------------------
Version: 0.5.9
Date: 19.02.2024
  Features:
    - added support for minibuffer tank mods
    - added basic Space Exploration data phase compatibilty (PR #57) 
  Changes:
    - nerfed advanced steam trains top speed
    - added crafting-with-fluid to steam assembler (PR #55)
  Bugfixes:
    - added checkup for gate edgecases
    - added checkup for drone port decon
---------------------------------------------------------------------------------------------------
Version: 0.5.8
Date: 24.01.2024
  Features:
    - added steam miner to steam power tech
    - added bio rocket fuel recipe
  Changes:
    - updated RU locale (PR #50)
  Bugfixes:
    - fixed bug with dangerOres
    - fixed that some recipes were set one machines but disabled
    - fixed bug that gia pump was placeable on nauvis
    - fixed rocket silo having bad state if placed by factory planner
    - fixed crash in multiplayer with non player forces
---------------------------------------------------------------------------------------------------
Version: 0.5.7
Date: 16.01.2024
  Features:
    - added stone excavator
  Changes:
    - decreased cost of EU circuit
  Bugfixes:
    - removed K2 opt dependance
    - fixed some typos
    - fixed metalworks 4 texture size
---------------------------------------------------------------------------------------------------
Version: 0.5.6
Date: 16.01.2024
  Changes:
    - decreased cost of EU circuit
  Bugfixes:
    - fixed reflux plating craftable, added prebaked reflux plating
---------------------------------------------------------------------------------------------------
Version: 0.5.5
Date: 14.01.2024
  Features:
    - added new 2x2 metalworks that can process ingots