@@ -358,10 +358,10 @@ ei_steam-advanced-locomotive=Advanced steam locomotive
 ei_plasma-heater=Plasma heater
 ei_quantum-computer=Quantum research computer
 
-ei_small-inserter=Filtering high capacity inserter
-ei_big-inserter=Filtering superlative capacity inserter
-ei_small-inserter-normal=High capacity inserter
-ei_big-inserter-normal=Superlative capacity inserter
+ei_small-inserter=Filtering high capacity crane
+ei_big-inserter=Filtering superlative capacity crane
+ei_small-inserter-normal=High capacity crane
+ei_big-inserter-normal=Superlative capacity crane
 
 ei_neo-belt=Neo transport belt
 ei_neo-underground-belt=Neo underground belt
@@ -552,8 +552,8 @@ ei_advanced-deep-drill=Advanced deep drill
 ei_molten-glass=Molten glass production
 ei_circuit-waver=Semiconductor based circuit production
 ei_charged-grenade=Charged grenades
-ei_small-inserter=High capacity inserter
-ei_big-inserter=Superlative capacity inserter
+ei_small-inserter=High capacity crane
+ei_big-inserter=Superlative capacity crane
 ei_advanced-crusher=Advanced crusher
 ei_black-hole-exploration=Black hole exploration
 ei_high-tech-parts=High tech part production
